# ossis

./: .gitignore  Makefile  README.md  compare_versions.sh  example.py  pyproject.toml
ossis/: __init__.py  converters.py  dataframe.py  display.py  exceptions.py  group_by.py  row.py  schema.py  tools.py  types.py
ossis/compute/: README.md  __init__.py  column_encodings.cpp  column_types.h  compiled.c  compiled.pyx  varchar_array.cpp
ossis/logging/: create_logger.py  google_cloud_logger.py  log_formatter.py
scratch/: _from_arrow.py  bit_perf.py  brace.py  con.py  decs.py  failing.py  groupby.py  html_it.py  logged.py  ranstr.py  rowwed.py  rowwer.py  serialize.py  test.py  test_compiled.py
scratch/vec/: simple.py
tests/: __init__.py  cities.py  test_arrow.py  test_benchmark_suite.py  test_column_encodings.py  test_compiled.py  test_converters_arrow.py  test_converters_pandas.py  test_converters_polars.py  test_dataframe.py  test_display.py  test_faker.py  test_fetching.py  test_field_extractor.py  test_group_by.py  test_jsonb_append.py  test_logging.py  test_lru_with_expiration.py  test_materialize_perf.py  test_random.py  test_row.py  test_schema.py  test_schema_arrow.py  test_schema_columns.py  test_single_item_cache.py  test_tools_dates.py  test_tools_retry.py  test_types.py  test_types_casting.py  test_types_parser.py
