[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossis"
version = "0.1.0"
description = "Common schema library for mabel-dev projects"
readme = "README.md"
authors = [
    {name = "Mabel Development Team", email = "support@mabeldev.com"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["schema", "data", "validation", "types"]
requires-python = ">=3.8"
dependencies = [
    "data-expectations>=1.7.0",
    "orjson",
    "numpy",
    "pyarrow",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "isort",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/mabel-dev/ossis"
Repository = "https://github.com/mabel-dev/ossis.git"
Issues = "https://github.com/mabel-dev/ossis/issues"

[tool.setuptools]
packages = ["ossis"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
src_paths = ["ossis"]
line_length = 100
multi_line_output = 3
force_single_line = true
float_to_top = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = 'py38'

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["SIM", "NPY201"]
ignore = []